# solanaERC20

./: README  README.md  check-balance.ts  create-token-account.ts  create-token-metadata.ts  create-token-mint.ts  mint-token.ts  package-lock.json  package.json
stable-coin/: Anchor.toml  README.md  package.json  pnpm-lock.yaml
stable-coin/programs/stable-coin/: Cargo.toml
stable-coin/programs/stable-coin/src/: lib.rs
stable-coin/tests/: stable-coin.ts
stablecoin-script/: README.md  config.ts  create-token-account.ts  generate-types.ts  initialize-mint.ts  main.ts  mint-collateral.ts  package.json  pnpm-lock.yaml  redeem-collateral.ts  tsconfig.json
stablecoin-script/config/: program.ts
stablecoin-script/idl/: stable_coin.json  stable_coin.ts
