[package]
name = "stable_coin"
version = "0.1.0"
description = "Stable Coin Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = "0.32.0"
anchor-spl = { version = "0.32.0", features = ["token_2022"] }

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]